add twitter widget

--- a/public/index.jade
+++ b/public/index.jade
@@ -36,6 +36,10 @@ html(data-ng-app="hack4good")
     script(src="/feature/example/init.js")
     link(rel="stylesheet", href="/feature/example/example.css")
 
+    // Twitter 
+    script(src="/feature/twitterwidget/IndexController.js")
+    script(src="/feature/twitterwidget/init.js")
+
     // .. more features
   
   // Pass View & Session Variables from Server Side to Angular
